# lmit-1

./: .env.sample  .gitignore  README.md  checklist.md  pyproject.toml  run.bat
config/: config.example.toml  markitdown-llm.sample.toml
docs/: gui-usage.md  session-cookie-strategy.md
docs/part1/: plan.md
docs/superpowers/plans/: 2026-04-25-scrapling-public-url.md
docs/superpowers/specs/: 2026-04-25-scrapling-public-url-design.md
scripts/: capture_facebook_session.py
src/lmit/: __init__.py  autostart.py  cancellation.py  cli.py  config.py  conversion_key.py  env.py  error_classification.py  file_selection.py  filename_enrichment.py  gui.py  gui_settings.py  manifest.py  path_safety.py  pipeline.py  reports.py  scanner.py
src/lmit/converters/: __init__.py  local_file.py  markitdown_adapter.py  markitdown_llm.py  paddleocr_provider.py  txt_urls.py
src/lmit/fetchers/: __init__.py  npm_registry.py  public_url.py  public_url_blocked.py  public_url_normalize.py  session_url.py  (+3 more)
tests/: test_cancellation_paths.py  test_cli_filters.py  test_conversion_key.py  test_env.py  test_error_classification.py  test_filename_enrichment.py  test_gui_log.py  test_gui_settings.py  test_login.py  test_manifest.py  test_markitdown_adapter.py  test_npm_registry.py  test_paddleocr_provider.py  test_path_safety.py  test_pipeline_retry.py  test_public_fetch_config.py  test_public_url_normalize.py  test_public_url_pipeline.py  test_public_url_quality.py  test_public_url_redirects.py  test_reports.py  test_scanner.py  test_session_url.py  test_txt_url_cancellation.py  test_txt_urls.py
(+8 files in other folders)
